添加单一包启动脚本，修改一键启动脚本